<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2017 Otávio Santana and others
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the Eclipse Public License v1.0
  ~ and Apache License v2.0 which accompanies this distribution.
  ~ The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
  ~ and the Apache License v2.0 is available at http://www.opensource.org/licenses/apache2.0.php.
  ~
  ~ You may elect to redistribute this code under either of these licenses.
  ~
  ~ Contributors:
  ~
  ~ Otavio Santana
  -->

<!-- $Rev: 684173 $ $Date: 2008-08-08 20:13:24 -0700 (Fri, 08 Aug 2008) $ -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jnosql.artemis.demo</groupId>
    <artifactId>graph</artifactId>
    <packaging>war</packaging>
    <name>Temperature sensor document</name>

    <parent>
        <groupId>org.jnosql.artemis</groupId>
        <artifactId>artemis-demo-java-ee</artifactId>
        <version>0.0.2</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tomee.version>7.0.2-SNAPSHOT</tomee.version>
        <version.shrinkwrap.resolver>2.0.0</version.shrinkwrap.resolver>
        <maven.compile.targetLevel>1.8</maven.compile.targetLevel>
        <maven.compile.sourceLevel>1.8</maven.compile.sourceLevel>
        <maven.compile.version>3.5.1</maven.compile.version>
    </properties>


    <build>
        <finalName>temperature</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${tomee.version}</version>
                <configuration>
                    <tomeeClassifier>plus</tomeeClassifier>
                    <args>-Xmx512m -XX:PermSize=256m</args>
                    <config>${project.basedir}/src/main/tomee/</config>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
       <dependency>
            <groupId>org.jnosql.artemis</groupId>
            <artifactId>graph-extension</artifactId>
            <version>0.0.3-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.thinkaurelius.titan</groupId>
            <artifactId>titan-berkeleyje</artifactId>
            <version>1.0.0</version>
        </dependency>


        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>6.0</version>
        </dependency>


    </dependencies>

</project>
